# rns-rs

./: .gitignore  Cargo.toml  README.md  UPSTREAM.md  deny.toml
.github/workflows/: ci.yml
docs/: builtin-hooks.md  crates-io-publish-runbook.md  manual-backbone-smoke.md  native-hooks.md  protocol-spec.md  rns-git.md  rns-server-operator-runbook.md  rnsh.md
rns-cli/: Cargo.toml  build.rs
rns-cli/src/: args.rs  format.rs  lib.rs  remote.rs  rnsd.rs  rnsh.rs  sentineld.rs  statsd.rs
rns-cli/tests/: rnid_cli.rs
rns-core/: Cargo.toml
rns-core/benches/: transport_hot_paths.rs
rns-core/src/: constants.rs  display.rs  msgpack.rs  packet.rs
rns-core/src/channel/: mod.rs
rns-core/src/link/: mod.rs
rns-core/src/resource/: receiver.rs
rns-core/src/transport/: announce_queue.rs  announce_verify_queue.rs  dedup.rs  inbound.rs  ingress_control.rs  jobs.rs  mod.rs  outbound.rs  path_requests.rs  queries.rs  retention.rs  types.rs
rns-core/tests/: resource_integration.rs  transport_integration.rs
rns-crypto/: Cargo.toml
rns-crypto/src/: identity.rs
rns-ctl/: Cargo.toml
rns-ctl/assets/: app.css  app.js  app.smoke.test.js  index_auth.html
rns-ctl/src/: api.rs  lib.rs  main.rs  stats_api.rs  tls.rs
rns-ctl/src/cmd/: daemon.rs  hook.rs  path.rs  status.rs
rns-ctl/tests/: integration.rs
rns-esp32/: Cargo.toml
rns-esp32/src/: driver.rs
rns-git/: Cargo.toml
rns-git/src/: acl.rs  client.rs  clone_cli.rs  commitsigs.rs  config.rs  create_cli.rs  git.rs  highlight.rs  lib.rs  pages.rs  perms_cli.rs  protocol.rs  release.rs  release_cli.rs  server.rs  stats.rs  sync_cli.rs  util.rs  work.rs  work_cli.rs
rns-git/tests/: e2e.rs  releases.rs  stats.rs
rns-hooks/: Cargo.toml  build-examples.sh
rns-hooks/examples/native_noop/: Cargo.toml
rns-hooks/examples/native_noop/src/: lib.rs
rns-hooks/sdk/rns-hooks-abi/: Cargo.toml
rns-hooks/sdk/rns-hooks-abi/src/: lib.rs  native.rs  stats.rs
rns-hooks/sdk/rns-hooks-sdk/: Cargo.toml
rns-hooks/sdk/rns-hooks-sdk/src/: lib.rs  native.rs
rns-hooks/src/: arena.rs  builtin.rs  lib.rs  manager.rs  native.rs  program.rs  runtime.rs
rns-hooks/tests/: builtin_hook.rs  native_hook.rs
rns-net/: Cargo.toml
rns-net/benches/: link_dispatch.rs
rns-net/examples/: echo.rs  message.rs  rnode_lora.rs  tcp_connect.rs
rns-net/src/: discovery.rs  driver.rs  event.rs  lib.rs  management.rs  node.rs  provider_bridge.rs  remote_management.rs  rpc.rs  shared_client.rs  storage.rs
rns-net/src/common/: callbacks.rs  config.rs  discovery.rs  event.rs  interface_stats.rs  link_manager.rs
rns-net/src/driver/: dispatch.rs  events.rs  lifecycle.rs  queries.rs  runtime_config.rs  tests.rs
rns-net/src/holepunch/: udp_direct.rs
rns-net/src/interface/: auto.rs  backbone.rs  kiss_iface.rs  local.rs  mod.rs  pipe.rs  rnode.rs  serial_iface.rs  tcp.rs  tcp_server.rs  udp.rs
rns-net/src/interface/i2p/: mod.rs
rns-net/src/interface/rnode/: mod.rs  transport.rs
rns-net/tests/: e2e.rs  e2e_hooks.rs  python_interop.rs
rns-sentinel-hook/: Cargo.toml
rns-sentinel-hook/src/: lib.rs
rns-server/: Cargo.toml  build.rs  build_common.rs
rns-server/src/: config.rs  control_plane.rs  main.rs  supervisor.rs
rns-server/src/supervisor/: drain.rs  process.rs  readiness.rs
rns-stats-hook/: Cargo.toml
rns-stats-hook/src/: lib.rs
scripts/: bisect-vps-rpc.sh  lint-host.sh  manual-backbone-smoke.sh  vps_daily_report.py
tests/docker/: Dockerfile
tests/docker/rns-server/: Dockerfile.rns-server  run.sh
tests/docker/suites/: 18_node_restart.sh
