[workspace]
members = ["rns-crypto", "rns-core", "rns-net", "rns-cli", "rns-ctl", "rns-server", "rns-hooks", "rns-stats-hook", "rns-sentinel-hook"]
exclude = ["rns-esp32"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/lelloman/rns-rs"
authors = ["rns-rs contributors"]

[workspace.dependencies]
rns-crypto = { version = "0.1.5", path = "rns-crypto" }
rns-core = { version = "0.1.9", path = "rns-core" }
rns-net = { version = "0.5.6", path = "rns-net" }
rns-hooks = { version = "0.1.5", path = "rns-hooks" }

# Compile crypto crate with optimizations even in debug/test builds.
# Helps curve25519-dalek performance in debug mode.
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.test.package.rns-crypto]
opt-level = 2
