[workspace]
members = ["rns-crypto", "rns-core", "rns-net", "rns-cli", "rns-ctl", "rns-server", "rns-hooks", "rns-stats-hook", "rns-sentinel-hook", "rns-git"]
default-members = ["rns-crypto", "rns-core", "rns-net", "rns-cli", "rns-ctl", "rns-server", "rns-git"]
exclude = ["rns-esp32"]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2021"
license-file = "LICENSE"
publish = false
repository = "https://github.com/lelloman/rns-rs"
authors = ["rns-rs contributors"]

[workspace.dependencies]
rns-crypto = { version = "0.1.8", path = "rns-crypto" }
rns-core = { version = "0.1.13", path = "rns-core" }
rns-net = { version = "0.5.10", path = "rns-net" }
rns-hooks = { version = "0.1.8", path = "rns-hooks", default-features = false }

# Compile crypto crate with optimizations even in debug/test builds.
# Helps curve25519-dalek performance in debug mode.
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.test.package.rns-crypto]
opt-level = 2
