[package]
name = "rns-cli"
description = "CLI tools for the Reticulum Network Stack"
version = "0.2.4"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
rns-hooks = ["rns-hooks-native"]
sidecars = [
    "dep:rns-hooks-abi",
    "dep:rns-stats-hook",
    "rns-stats-hook/builtin",
    "dep:rns-sentinel-hook",
    "rns-sentinel-hook/builtin",
]
rns-hooks-wasm = ["sidecars", "rns-net/rns-hooks-wasm"]
rns-hooks-native = [
    "sidecars",
    "rns-net/rns-hooks-native",
]
rns-hooks-builtin = ["sidecars", "rns-net/rns-hooks-builtin"]

[dependencies]
rns-net.workspace = true
rns-core.workspace = true
rns-crypto.workspace = true
rns-hooks-abi = { version = "0.1.4", path = "../rns-hooks/sdk/rns-hooks-abi", optional = true }
rns-stats-hook = { version = "0.1.3", path = "../rns-stats-hook", default-features = false, optional = true }
rns-sentinel-hook = { version = "0.1.3", path = "../rns-sentinel-hook", default-features = false, optional = true }
log = "0.4"
env_logger = "0.10"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rnsd"
path = "src/bin/rnsd.rs"

[[bin]]
name = "rnstatus"
path = "src/bin/rnstatus.rs"

[[bin]]
name = "rnpath"
path = "src/bin/rnpath.rs"

[[bin]]
name = "rnid"
path = "src/bin/rnid.rs"

[[bin]]
name = "rnprobe"
path = "src/bin/rnprobe.rs"

[[bin]]
name = "rnsh"
path = "src/bin/rnsh.rs"

[[bin]]
name = "rns-statsd"
path = "src/bin/rns-statsd.rs"
required-features = ["sidecars"]

[[bin]]
name = "rns-sentineld"
path = "src/bin/rns-sentineld.rs"
required-features = ["sidecars"]
