[package]
name = "rns-core"
description = "Wire protocol, transport routing, and link/resource engine for the Reticulum Network Stack"
version = "0.1.10"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
rns-crypto.workspace = true
log = "0.4"

[dev-dependencies]
serde_json = "1"
