[package]
name = "rns-crypto"
description = "Cryptographic primitives for the Reticulum Network Stack"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
espidf = ["esp-idf-sys"]

[dependencies]
esp-idf-sys = { version = "0.37", optional = true }
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1"
