[package]
name = "rns-ctl"
description = "Reticulum Network Stack control tool"
version = "0.2.4"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
tls = ["rustls", "rustls-pemfile"]
rns-hooks = ["rns-net/rns-hooks"]

[dependencies]
rns-net.workspace = true
rns-core.workspace = true
rns-crypto.workspace = true
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls = "0.23"
rustls-pemfile = "2"
