[package]
name = "rns-esp32"
version = "0.1.0"
edition = "2021"
description = "Reticulum LoRa transport node firmware for Heltec WiFi LoRa 32 V3"

[features]
default = []
firmware = [
    "dep:embedded-graphics",
    "dep:esp-idf-hal",
    "dep:esp-idf-svc",
    "dep:esp-idf-sys",
    "dep:ssd1306",
    "rns-crypto/espidf",
]

[dependencies]
rns-core = { path = "../rns-core", default-features = false, features = ["std"] }
rns-crypto = { path = "../rns-crypto", default-features = false, features = ["std"] }

esp-idf-sys = { version = "0.37", optional = true }
esp-idf-svc = { version = "0.52", optional = true }
esp-idf-hal = { version = "0.46", optional = true }

log = "0.4"
ssd1306 = { version = "0.9", optional = true }
embedded-graphics = { version = "0.8", optional = true }

[[bin]]
name = "rns-esp32"
path = "src/main.rs"
required-features = ["firmware"]
test = false

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

# Crypto is unusably slow without optimization
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.dev.package.curve25519-dalek]
opt-level = 2

[profile.dev.package.ed25519-dalek]
opt-level = 2

[profile.dev.package.sha2]
opt-level = 2
