[package]
name = "rns-git"
description = "Reticulum Git transport tools"
version = "0.1.2"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
rns-core.workspace = true
rns-crypto.workspace = true
rns-net.workspace = true
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rngit"
path = "src/bin/rngit.rs"

[[bin]]
name = "git-remote-rns"
path = "src/bin/git-remote-rns.rs"

[[bin]]
name = "rngcs"
path = "src/bin/rngcs.rs"
