[package]
name = "rns-hooks"
description = "Programmable hook system for the Reticulum Network Stack"
version = "0.1.7"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["wasm"]
wasm = ["dep:wasmtime"]
native = ["dep:libloading"]

[dependencies]
wasmtime = { version = "29", optional = true }
libloading = { version = "0.8", optional = true }
log = "0.4"
rns-hooks-abi = { version = "0.1.4", path = "sdk/rns-hooks-abi" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1"

[[bench]]
name = "hook_dispatch"
harness = false
