[package]
name = "rns-net"
description = "Network interfaces and node driver for the Reticulum Network Stack"
version = "0.5.7"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["iface-tcp", "iface-udp", "iface-local", "iface-auto", "iface-serial", "iface-kiss", "iface-pipe", "iface-rnode", "iface-backbone", "iface-i2p"]
rns-hooks = ["dep:rns-hooks", "dep:serde", "dep:bincode"]
iface-tcp = []
iface-udp = []
iface-local = []
iface-auto = []
iface-serial = []
iface-kiss = []
iface-pipe = []
iface-rnode = []
iface-backbone = []
iface-i2p = []

[dependencies]
rns-core.workspace = true
rns-hooks = { workspace = true, optional = true }
rns-crypto.workspace = true
log = "0.4"
rayon = "1"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
polling = "3"
bzip2 = "0.5"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }

[dev-dependencies]
env_logger = "0.11"
serde_json = "1"
ctrlc = "3"
tempfile = "3"

[[example]]
name = "tcp_connect"

[[example]]
name = "rnsd"

[[example]]
name = "rnode_lora"

[[example]]
name = "rnode_hil"
