[package]
name = "rns-net"
description = "Network interfaces and node driver for the Reticulum Network Stack"
version = "0.5.10"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["iface-tcp", "iface-udp", "iface-local", "iface-auto", "iface-serial", "iface-kiss", "iface-pipe", "iface-rnode", "iface-backbone", "iface-i2p"]
rns-hooks = ["rns-hooks-native"]
rns-hooks-wasm = ["hooks", "dep:rns-hooks-crate", "rns-hooks-crate/wasm", "dep:serde", "dep:postcard"]
rns-hooks-native = ["hooks", "dep:rns-hooks-crate", "rns-hooks-crate/native", "dep:serde", "dep:postcard"]
rns-hooks-builtin = ["hooks", "dep:rns-hooks-crate", "dep:serde", "dep:postcard"]
hooks = []
iface-tcp = []
iface-udp = []
iface-local = []
iface-auto = []
iface-serial = []
iface-kiss = []
iface-pipe = []
iface-rnode = []
iface-backbone = []
iface-i2p = []

[dependencies]
rns-core.workspace = true
rns-hooks-crate = { package = "rns-hooks", version = "0.1.8", path = "../rns-hooks", optional = true, default-features = false }
rns-crypto.workspace = true
log = "0.4"
rayon = "1"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
polling = "3"
bzip2 = "0.5"
serde = { version = "1", features = ["derive"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
serde_json = "1"
ctrlc = "3"
tempfile = "3"

[[bench]]
name = "link_dispatch"
harness = false

[[bench]]
name = "shared_client_replay"
harness = false

[[example]]
name = "tcp_connect"

[[example]]
name = "rnsd"

[[example]]
name = "rnode_lora"

[[example]]
name = "rnode_hil"
