[package]
name = "rns-sentinel-hook"
description = "WASM sentinel hook used by rns-sentineld"
version = "0.1.2"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rns-hooks-sdk = { version = "0.1.3", path = "../rns-hooks/sdk/rns-hooks-sdk" }
rns-hooks-abi = { version = "0.1.3", path = "../rns-hooks/sdk/rns-hooks-abi" }
