[package]
name = "rns-sentinel-hook"
description = "Sentinel hook used by rns-sentineld"
version = "0.1.2"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
builtin = ["dep:rns-hooks"]
rns-hooks = ["builtin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rns-hooks = { version = "0.1.6", path = "../rns-hooks", default-features = false, optional = true }
rns-hooks-sdk = { version = "0.1.3", path = "../rns-hooks/sdk/rns-hooks-sdk" }
rns-hooks-abi = { version = "0.1.3", path = "../rns-hooks/sdk/rns-hooks-abi" }
