[package]
name = "rns-sentinel-hook"
description = "Sentinel hook used by rns-sentineld"
version = "0.1.4"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
builtin = ["dep:rns-hooks"]
rns-hooks = ["builtin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rns-hooks = { version = "0.1.8", path = "../rns-hooks", default-features = false, optional = true }
rns-hooks-sdk = { version = "0.1.5", path = "../rns-hooks/sdk/rns-hooks-sdk" }
rns-hooks-abi = { version = "0.1.5", path = "../rns-hooks/sdk/rns-hooks-abi" }
