[package]
name = "rns-server"
description = "Batteries-included Reticulum node server"
version = "0.1.1"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
rns-hooks = ["rns-cli/rns-hooks", "rns-net/rns-hooks", "rns-ctl/rns-hooks"]

[dependencies]
rns-cli = { version = "0.2.2", path = "../rns-cli" }
rns-net.workspace = true
rns-ctl = { version = "0.2.3", path = "../rns-ctl" }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
