[package]
name = "rns-server"
description = "Batteries-included Reticulum node server"
version = "0.1.4"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
rns-hooks = ["rns-hooks-native"]
rns-hooks-wasm = ["rns-cli/rns-hooks-wasm", "rns-net/rns-hooks-wasm", "rns-ctl/rns-hooks-wasm"]
rns-hooks-native = ["rns-cli/rns-hooks-native", "rns-net/rns-hooks-native", "rns-ctl/rns-hooks-native"]
rns-hooks-builtin = ["rns-cli/rns-hooks-builtin", "rns-net/rns-hooks-builtin", "rns-ctl/rns-hooks-builtin"]

[dependencies]
rns-cli = { version = "0.2.5", path = "../rns-cli" }
rns-net.workspace = true
rns-ctl = { version = "0.2.7", path = "../rns-ctl" }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
