[package]
name = "rns-hooks-sdk"
version = "0.1.5"
edition = "2021"
description = "Guest-side SDK for writing rns-hooks WASM programs"
license = "MIT"
repository = "https://github.com/lelloman/rns-rs"

[features]
default = []
alloc = []

[dependencies]
rns-hooks-abi = { version = "0.1.5", path = "../rns-hooks-abi" }

[lib]
